Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12615 Raster engine on Mac OS X
  3. QTBUG-18150

Demo browser doesn't repaint correctly the url text field

    XMLWordPrintable

Details

    • 360c5f2c39a39c2a8296f21e6f5f577367610853

    Description

      Demo browser doesn't repaint correctly the url text field in the unified toolbar using the raster engine.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            freling Fabien Freling (closed Nokia identity) (Inactive)
            freling Fabien Freling (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes