Move the painting redirection to the unified toolbar surface.

If the new parent of a widget is inside the unified
toolbar, we need to update the redirection.

Task-number: QTBUG-18150
Reviewed-by: Samuel Rødal